--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -33,6 +33,7 @@
     <link href="//fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
   <% } %>
   <%- css('css/pintuer') %>
+  <%- css('css/style') %>
   <%- js('js/jquery') %>
   <%- js('js/pintuer') %>
   <%- partial('google-analytics') %>
